# Y-SLAM

./: CMakeLists.txt  README.md
config/: config.yaml
include/Yslam/: camera.h  config.h  frame.h  g2opose.h  global.h  mpoint.h  tool.h  vodometry.h
src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2opose.cpp  tool.cpp  vodometry_main.cpp  vodometry_point.cpp
test/: CMakeLists.txt  run_vo.cpp
